--- a/css/header.css
+++ b/css/header.css
@@ -1,84 +1,124 @@
 /* 头部 */
-.header_tip{
+.header_tip {
     height: 35px;
     line-height: 35px;
     background: #f5f5f5;
 }
-.tip_a{
+
+.tip_a {
     font-size: 0;
 }
-.tip_a a{
+
+.tip_a a {
     font-size: 12px;
     margin-right: 15px;
     border-right: 1px solid #999;
     padding-right: 15px;
 }
-.tip_a a:last-child{
+
+.tip_a a:last-child {
     margin-right: 0;
     padding-right: 0;
     border-right: none;
 }
-.logo{
+
+.logo {
     height: 100px;
     margin: 10px 0;
 }
-.logo_img{
+
+.logo_img {
     width: 250px;
     height: 100%;
 }
-.logo_img img{
+
+.logo_img img {
     width: 100%;
 }
-.logo_des{
+
+.logo_des {
     height: 100px;
     padding-left: 25px;
-    border-left: 1px solid #208fe1 ;
+    border-left: 1px solid #208fe1;
 }
-.logo_des p:nth-child(1){
+
+.logo_des p:nth-child(1) {
     font-size: 16px;
     margin-bottom: 10px;
     margin-top: 20px;
 }
-.logo_des p:nth-child(2){
+
+.logo_des p:nth-child(2) {
     font-size: 14px;
 }
-.logo_phone{
+
+.logo_phone {
     font-size: 16px;
     text-align: right;
 }
-.logo_phone p:nth-child(1){
+
+.logo_phone p:nth-child(1) {
     margin-top: 20px;
     margin-bottom: 10px;
 }
-.logo_phone p:nth-child(2){
+
+.logo_phone p:nth-child(2) {
     font-size: 18px;
     color: #208fe1;
     letter-spacing: 2px;
 }
+
 /* 导航 */
-nav{
+nav {
     height: 36px;
     background: #208fe1;
     line-height: 36px;
 }
-.nav_ul li{
+
+.nav_ul li {
     float: left;
     width: 12.5%;
     text-align: center;
+    position: relative;
 }
-.nav_ul li a{
+
+.nav_ul li a {
     color: #fff;
     font-size: 14px;
+    display: block;
 }
-.nav_ul .isActive{
+
+.nav_ul .isActive {
     background: #ff6621;
 }
+.nav_ul li:hover .son_nav{
+    z-index: 9;
+    opacity: 1;
+}
+
+.son_nav {
+    position: absolute;
+    left: 0;
+    top: 36px;
+    width: 100%;
+    background: #ff6621;
+    opacity: 0;
+    transition: all 1.5s;
+}
+.son_nav a{
+    display: block;
+    line-height: 31px;
+}
+.son_nav a:hover{
+    background: rgba(0, 0, 0, .2);
+}
 /* 轮播 */
-.swiper-pagination-bullet{
+.swiper-pagination-bullet {
     width: 20px;
     height: 5px;
     border-radius: 0;
 }
-.lunbo img{
+
+.lunbo img {
     width: 100%;
 }
