--- a/css/product.css
+++ b/css/product.css
@@ -139,15 +139,17 @@
 }
 
 /* news */
-.list_news ul li{
+.list_news ul li {
     border-bottom: 1px dashed #ccc;
     overflow: hidden;
     padding-bottom: 20px;
     padding-top: 20px;
 }
-.list_news ul li:first-child{
+
+.list_news ul li:first-child {
     padding-top: 10px;
 }
+
 .left_img {
     width: 200px;
 }
@@ -169,25 +171,77 @@
 .right_info a {
     color: #000;
 }
-.right_info a:hover{
+
+.right_info a:hover {
     color: rgb(32, 143, 225);
 }
 
 .right_info span {
     font-size: 12px;
 }
-.right_con .news_ms{
+
+.right_con .news_ms {
     font-size: 14px;
     line-height: 24px;
 }
+
 /* about */
-.about_us p{
+.about_us p {
     font-size: 14px;
     line-height: 26px;
     text-indent: 2em;
     margin-bottom: 20px;
 }
-.about_us img{
+
+.about_us img {
     max-width: 100%;
     min-width: auto;
+}
+
+/* article */
+.r_list h1 {
+    text-align: center;
+    font-size: 16px;
+    font-weight: normal;
+}
+
+.aticle_info {
+    margin: 20px 0;
+    text-align: center;
+    line-height: 32px;
+    border-top: 1px dashed #e0e1dc;
+    border-bottom: 1px dashed #e0e1dc;
+}
+
+.aticle_info i {
+    font-style: normal;
+}
+
+.aticle_info span:first-child {
+    margin-right: 10px;
+}
+.article_con p{
+    font-size: 14px;
+    line-height: 24px;
+    margin-bottom: 15px;
+    text-indent: 2em;
+    box-sizing: border-box;
+}
+.article_con img{
+    max-width: 100%;
+    min-width: auto;
+}
+.next_page p{
+    font-size: 14px;
+    line-height: 24px;
+    margin-bottom: 10px;
+}
+.next_page a{
+    color: rgb(32, 143, 225);
+}
+/* 联系我们 */
+.contact_us p{
+    font-size: 16px;
+    line-height: 32px;
+    margin-bottom: 20px;
 }
